<resources>
    <string name="app_name">MovieDB</string>
    <string name="fb_login_protocol_scheme">fb169285467041083</string>
    <string name="text_splash_bottom">MovieDb Inc.</string>
    <string name="title_app">App</string>
    <string name="facebook_app_id">169285467041083</string>
    <string name="title_popular">Most Popular Movies</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="text_detail_overview">Overview</string>
    <string name="action_view_more">More</string>
    <string name="action_trailer">Trailer</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_top_rate">Top Rate</string>
    <string name="title_genres">Genres</string>
    <string name="detail_activity_release">Release Date: %s</string>
    <string name="title_production">Production</string>
    <string name="title_production_failed">Production (Load data failed)</string>
    <string name="title_cast">Casts</string>
    <string name="title_cast_failed">Casts (Load data failed)</string>
    <string name="title_crew">Crews</string>
    <string name="title_crew_failed">Crews (Load data failed)</string>
    <string name="title_less">Less</string>
    <string name="title_more">More</string>
    <string name="title_loading">Loading…</string>
    <string name="title_results">Results: %s</string>
    <string name="title_results_genre">Genre: %s</string>
    <string name="toast_failed">Failed:</string>
    <string name="title_no_data">No data</string>
    <string name="title_favourite_movies">My Favourite Movies</string>
    <string name="detail_delete_movie_alert">Delete %s From Favourite Success</string>
    <string name="detail_delete_movie_failed">Remove Favourite Failed</string>
    <string name="detail_add_favourite_failed">Add Favourite Failed</string>
    <string name="detail_add_favourite_success">Add %s To Favourite Success</string>
    <string name="home_load_genres_failed">Genres Data Not Available!</string>
    <string name="home_check_network">Please check network connection.</string>
    <string name="title_name">name</string>
    <string name="title_id">id</string>
    <string name="title_email">email</string>
    <string name="title_link">link</string>
    <string name="title_fields">fields</string>
    <string name="title_gender">gender</string>
    <string name="title_cover">cover</string>
    <string name="photos">photos</string>
    <string name="title_images">images</string>
    <string name="fields_name">id,name,link,email,gender</string>
    <string name="fields">fields</string>
    <string name="data">data</string>
    <string name="title_television">Television</string>
    <string name="title_home">Movie</string>
    <string name="title_cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="title_infomation">Information</string>
    <string name="title_related_movie">Related movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_app_name">MovieShelf</string>
    <string name="password">Password</string>
    <string name="hint_email">User name</string>
    <string name="title_remember_account">Remeber me</string>
    <string name="title_logout">Logout</string>
</resources>
